<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="40dp"
    android:id="@+id/main_menu">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleAsteroids"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textSize="25sp" />

    <Button
        android:id="@+id/play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play"
        style="@style/StyleButton" />

    <Button
        android:id="@+id/configuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configuration"
        style="@style/StyleButton.alternative" />

    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        style="@style/StyleButton.alternative"
        android:onClick="fireAbout" />

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        style="@style/StyleButton.alternative" />
</LinearLayout>