<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="5"
        android:title="@string/configuration"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="10"
        android:title="@string/about"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_buscar"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="115"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView" />
</menu>